Add custom params

--- a/googlefirestore/conf/googlefirestore.properties
+++ b/googlefirestore/conf/googlefirestore.properties
@@ -21,7 +21,10 @@ googlefirestore.serviceAccountKey=serviceAccountKey.json
 #
 # ProjectId determines which firestore instance will be used.
 #
-googlefirestore.projectId=yourProjectId
+googlefirestore.projectId=firestore-icde
 
 # Strongly recommended to set to uniform.
-# requestdistribution = uniform
+requestdistribution = uniform
+recordcount = 1000000
+fieldcount = 1
+fieldsize = 900
